--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,9 @@
 @import './app/styles/general.scss';
 
-@media screen and (min-width: 0px) and (max-width: 599px) {
-  @import './app/styles/smartphone.scss';
+@media screen and (min-width: 0px) and (max-width: 969px) {
+  @import './app/styles/mobile.scss';
 }
 
-@media screen and (min-width: 600px) and (max-width: 959px) {
-  @import './app/styles/tablet.scss';
-}
-
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 970px) {
   @import './app/styles/desktop.scss';
 }
