Add Limoney to Jobs

--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -63,6 +63,18 @@
 
     <ul>
       <li>
+        <div *ngIf="global.lang === 'en'">
+          LGPD (General Data Protection Law): Knowing and understanding your
+          impacts (2021 - Alura)
+        </div>
+
+        <div *ngIf="global.lang === 'pt'">
+          LGPD (Lei Geral de Proteção de Dados): Conhecendo e entendendo seus
+          impactos (2021 - Alura)
+        </div>
+      </li>
+
+      <li>
         SFPC - SCRUM Foundation Professional Certificate (2019 - CertiProf)
       </li>
 
@@ -109,14 +121,54 @@
     <ul>
       <li>
         <div *ngIf="global.lang === 'en'">
+          <strong> May/2020 (Current) - TQI - From Home </strong>
+        </div>
+
+        <div *ngIf="global.lang === 'pt'">
+          <strong> Mai/2020 (Atual) - TQI - Remoto </strong>
+        </div>
+
+        <ul>
+          <li>
+            <div *ngIf="global.lang === 'en'">
+              Position: Software Engineer (Front-End), responsible for the
+              presentation and accessibility of client applications.
+            </div>
+
+            <div *ngIf="global.lang === 'pt'">
+              Cargo: Engenheiro de software (Front-End), responsável pela
+              apresentação e acessibilidade das aplicações dos clientes.
+            </div>
+          </li>
+
+          <li>
+            <div *ngIf="global.lang === 'en'">
+              Activities: Front-end development, using HTML5, Angular, JQuery,
+              CSS3, SASS, Javascript, Typescript, Bootstrap, portability system
+              for mobile WEB platforms. Integration with systems (APIs) in
+              Restfull.
+            </div>
+
+            <div *ngIf="global.lang === 'pt'">
+              Atividades: Desenvolvimento Front-End, utilizando HTML5, Angular,
+              JQuery, CSS3, SASS, Javascript, Typescript, Bootstrap,
+              portabilidade do sistema para plataformas móveis WEB. Integração
+              com sistemas distribuídos (APIs) em Restfull.
+            </div>
+          </li>
+        </ul>
+      </li>
+
+      <li>
+        <div *ngIf="global.lang === 'en'">
           <strong>
-            Dec/2014 (Current) - Roadcard - São Paulo/SP/Brazil (Home Office)
+            Dec/2014 to May/2020 - Roadcard - São Paulo/SP/Brazil
           </strong>
         </div>
 
         <div *ngIf="global.lang === 'pt'">
           <strong>
-            Dez/2014 (Atual) - Roadcard - São Paulo/SP/Brasil (Home Office)
+            Dez/2014 à Mai/2020 - Roadcard - São Paulo/SP/Brasil
           </strong>
         </div>
 
@@ -124,12 +176,12 @@
           <li>
             <div *ngIf="global.lang === 'en'">
               Position: Senior Front-End Developer Analyst, responsible for the
-              presentation and accessibility layer of the Pamcard WEB system.
+              presentation and accessibility of the Pamcard WEB system.
             </div>
 
             <div *ngIf="global.lang === 'pt'">
               Cargo: Analista desenvolvedor Front-End Senior, responsável pela
-              camada de apresentação e acessibilidade do sistema Pamcard WEB.
+              apresentação e acessibilidade do sistema Pamcard WEB.
             </div>
           </li>
 
