--- a/src/app/pages/jobs/jobs.component.html
+++ b/src/app/pages/jobs/jobs.component.html
@@ -9,6 +9,16 @@
   <div class="main">
     <div class="list" id="list-jobs">
       <div class="item">
+        <div class="wrap" (click)="showHideJobGallery('job-limoney')">
+          <div class="image">
+            <img src="../../../assets/jobs/limoney/cover.png" alt="" />
+          </div>
+
+          <div class="text">Limoney</div>
+        </div>
+      </div>
+
+      <div class="item">
         <div class="wrap" (click)="showHideJobGallery('job-sistema-pamcard')">
           <div class="image">
             <img src="../../../assets/jobs/sistemaPamcard/cover.png" alt="" />
@@ -19,7 +29,11 @@
       </div>
 
       <div class="item">
-        <div class="wrap" (click)="showHideJobGallery('job-pamcard-monitor')">
+        <div
+          *ngIf="global.isDesktop"
+          class="wrap"
+          (click)="showHideJobGallery('job-pamcard-monitor')"
+        >
           <div class="image">
             <img src="../../../assets/jobs/pamcardMonitor/cover.png" alt="" />
           </div>
@@ -48,8 +62,12 @@
         </div>
       </div>
 
-      <div *ngIf="global.isDesktop" class="item">
-        <div class="wrap" (click)="showHideJobGallery('job-pmsv')">
+      <div class="item">
+        <div
+          *ngIf="global.isDesktop"
+          class="wrap"
+          (click)="showHideJobGallery('job-pmsv')"
+        >
           <div class="image">
             <img src="../../../assets/jobs/pmsv/cover.png" alt="" />
           </div>
@@ -58,8 +76,12 @@
         </div>
       </div>
 
-      <div *ngIf="global.isDesktop" class="item">
-        <div class="wrap" (click)="showHideJobGallery('job-interface-eng')">
+      <div class="item">
+        <div
+          *ngIf="global.isDesktop"
+          class="wrap"
+          (click)="showHideJobGallery('job-interface-eng')"
+        >
           <div class="image">
             <img src="../../../assets/jobs/interfaceEng/cover.png" alt="" />
           </div>
@@ -90,6 +112,163 @@
   </div>
   <!-- end .main -->
 </div>
+
+<div class="gallery" id="job-limoney">
+  <div class="top">
+    <div class="title">
+      <div class="text">Limoney</div>
+
+      <div class="link">
+        <a href="https://limoney.app" target="_blank">
+          <div *ngIf="global.lang === 'en'">(Visit HTML Version)</div>
+          <div *ngIf="global.lang === 'pt'">(Veja a Versão HTML)</div>
+        </a>
+      </div>
+    </div>
+
+    <div class="close" (click)="showHideJobGallery('job-limoney')">
+      <i class="fas fa-times"></i>
+    </div>
+  </div>
+  <!-- end .top -->
+
+  <div class="main">
+    <div
+      class="arrow"
+      [class.disabled]="galleryArrowLeftDisabled"
+      (click)="showPrevNextJobItemGallery($event, 'job-limoney-', 'prev')"
+    >
+      <i class="fas fa-chevron-left"></i>
+    </div>
+    <div
+      class="arrow"
+      [class.disabled]="galleryArrowRightDisabled"
+      (click)="showPrevNextJobItemGallery($event, 'job-limoney-', 'next')"
+    >
+      <i class="fas fa-chevron-right"></i>
+    </div>
+
+    <div class="item show" id="job-limoney-1">
+      <img src="../../../assets/jobs/limoney/1.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-2">
+      <img src="../../../assets/jobs/limoney/2.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-3">
+      <img src="../../../assets/jobs/limoney/3.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-4">
+      <img src="../../../assets/jobs/limoney/4.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-5">
+      <img src="../../../assets/jobs/limoney/5.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-6">
+      <img src="../../../assets/jobs/limoney/6.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-7">
+      <img src="../../../assets/jobs/limoney/7.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-8">
+      <img src="../../../assets/jobs/limoney/8.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-9">
+      <img src="../../../assets/jobs/limoney/9.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-10">
+      <img src="../../../assets/jobs/limoney/10.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-11">
+      <img src="../../../assets/jobs/limoney/11.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-12">
+      <img src="../../../assets/jobs/limoney/12.png" alt="" />
+    </div>
+  </div>
+  <!-- end .main -->
+
+  <div class="bottom">
+    <div
+      class="arrow"
+      [class.disabled]="galleryListArrowLeftDisabled"
+      (click)="scrollHorizontalGalleryList($event, 'left', 'job-limoney-list')"
+    >
+      <i class="fas fa-chevron-left"></i>
+    </div>
+
+    <div class="list" id="job-limoney-list">
+      <div class="item" (click)="showJobItemGallery('job-limoney-1', 1)">
+        <img src="../../../assets/jobs/limoney/thumbnail-1.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-2', 2)">
+        <img src="../../../assets/jobs/limoney/thumbnail-2.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-3', 3)">
+        <img src="../../../assets/jobs/limoney/thumbnail-3.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-4', 4)">
+        <img src="../../../assets/jobs/limoney/thumbnail-4.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-5', 5)">
+        <img src="../../../assets/jobs/limoney/thumbnail-5.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-6', 6)">
+        <img src="../../../assets/jobs/limoney/thumbnail-6.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-7', 7)">
+        <img src="../../../assets/jobs/limoney/thumbnail-7.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-8', 8)">
+        <img src="../../../assets/jobs/limoney/thumbnail-8.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-9', 9)">
+        <img src="../../../assets/jobs/limoney/thumbnail-9.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-10', 10)">
+        <img src="../../../assets/jobs/limoney/thumbnail-10.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-11', 11)">
+        <img src="../../../assets/jobs/limoney/thumbnail-11.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-12', 12)">
+        <img src="../../../assets/jobs/limoney/thumbnail-12.png" alt="" />
+      </div>
+    </div>
+    <!-- end.list #job-sistema-pamcard-list -->
+
+    <div
+      class="arrow"
+      [class.disabled]="galleryListArrowRightDisabled"
+      (click)="scrollHorizontalGalleryList($event, 'right', 'job-limoney-list')"
+    >
+      <i class="fas fa-chevron-right"></i>
+    </div>
+  </div>
+  <!-- end .bottom -->
+</div>
+<!-- end .gallery #job-limoney -->
 
 <div class="gallery" id="job-sistema-pamcard">
   <div class="top">
