Update tools section

--- a/src/app/pages/tools/tools.component.html
+++ b/src/app/pages/tools/tools.component.html
@@ -64,10 +64,14 @@
 
       <div class="item">
         <div>
-          <img src="../../../assets/tools/jquery.png" alt="Logo JQuery" />
+          <img
+            src="../../../assets/tools/single-spa.png"
+            alt="Logo Single-SPA"
+          />
         </div>
 
-        <div>JQuery</div>
+        <div>Single-SPA</div>
+        <div>Micro frontend</div>
       </div>
     </div>
   </div>
