--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -8,7 +8,7 @@
           residing in Brazil, with availability to work and live in Portugal.
         </p>
 
-        <p>Contact: philipi@bovo.me</p>
+        <p>Contact: philipi.bovo@gmail.com</p>
       </div>
 
       <div *ngIf="global.lang === 'pt'">
@@ -17,7 +17,7 @@
           disponibilidade para atuar e morar em Portugal.
         </p>
 
-        <p>Contato: philipi@bovo.me</p>
+        <p>Contato: philipi.bovo@gmail.com</p>
       </div>
 
       <p>
@@ -143,17 +143,18 @@
 
           <li>
             <div *ngIf="global.lang === 'en'">
-              Activities: Front-end development, using HTML5, Angular, JQuery,
-              CSS3, SASS, Javascript, Typescript, Bootstrap, portability system
-              for mobile WEB platforms. Integration with systems (APIs) in
-              Restfull.
+              Activities: Front-end development, using HTML5, Angular,
+              Single-SPA (micro-frontend), JQuery, CSS3, SASS, Javascript,
+              Typescript, Bootstrap, portability system for mobile WEB
+              platforms. Integration with systems (APIs) in Restfull.
             </div>
 
             <div *ngIf="global.lang === 'pt'">
               Atividades: Desenvolvimento Front-End, utilizando HTML5, Angular,
-              JQuery, CSS3, SASS, Javascript, Typescript, Bootstrap,
-              portabilidade do sistema para plataformas móveis WEB. Integração
-              com sistemas distribuídos (APIs) em Restfull.
+              Single-SPA (micro-frontend), JQuery, CSS3, SASS, Javascript,
+              Typescript, Bootstrap, portabilidade do sistema para plataformas
+              móveis WEB. Integração com sistemas distribuídos (APIs) em
+              Restfull.
             </div>
           </li>
         </ul>
