--- a/src/app/pages/jobs/jobs.component.html
+++ b/src/app/pages/jobs/jobs.component.html
@@ -195,6 +195,14 @@
     <div class="item" id="job-limoney-12">
       <img src="../../../assets/jobs/limoney/12.png" alt="" />
     </div>
+
+    <div class="item" id="job-limoney-13">
+      <img src="../../../assets/jobs/limoney/13.png" alt="" />
+    </div>
+
+    <div class="item" id="job-limoney-14">
+      <img src="../../../assets/jobs/limoney/14.png" alt="" />
+    </div>
   </div>
   <!-- end .main -->
 
@@ -254,6 +262,14 @@
 
       <div class="item" (click)="showJobItemGallery('job-limoney-12', 12)">
         <img src="../../../assets/jobs/limoney/thumbnail-12.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-13', 13)">
+        <img src="../../../assets/jobs/limoney/thumbnail-13.png" alt="" />
+      </div>
+
+      <div class="item" (click)="showJobItemGallery('job-limoney-14', 14)">
+        <img src="../../../assets/jobs/limoney/thumbnail-14.png" alt="" />
       </div>
     </div>
     <!-- end.list #job-sistema-pamcard-list -->
